--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -7,7 +7,7 @@
     <div ng-repeat="story in stories | orderBy:'+now'">
         <div class="list">
           <div class="item item-thumbnail-left item-text-wrap">
-            <img ng-src="https://t.4cdn.org/{{selectedBoard}}/{{story.tim}}s.jpg" ng-click='showPopup("https://i.4cdn.org/{{selectedBoard}}/{{story.tim}}{{story.ext}}")'>
+            <img ng-src="https://t.4cdn.org/{{selectedBoard}}/{{story.tim}}s.jpg" ng-click='showPopup("https://i.4cdn.org/{{selectedBoard}}/{{story.tim}}{{story.ext}}")' ng-if="story.tim">
               <!-- <a href="#/app/browse" ng-click='setThread(story.no)'> -->
               <div  ng-click='setThread(story.no)' >
 	              <h2>{{story.sub}}</h2>
